import new icon, fix group conversation icon, fix selection overflow

--- a/src/assets/DynamicsFont/style.css
+++ b/src/assets/DynamicsFont/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'dynamics_icon';
-  src:  url('fonts/dynamics_icon.eot?845iwt');
-  src:  url('fonts/dynamics_icon.eot?845iwt#iefix') format('embedded-opentype'),
-    url('fonts/dynamics_icon.woff2?845iwt') format('woff2'),
-    url('fonts/dynamics_icon.ttf?845iwt') format('truetype'),
-    url('fonts/dynamics_icon.woff?845iwt') format('woff'),
-    url('fonts/dynamics_icon.svg?845iwt#dynamics_icon') format('svg');
+  src:  url('fonts/dynamics_icon.eot?64k03c');
+  src:  url('fonts/dynamics_icon.eot?64k03c#iefix') format('embedded-opentype'),
+    url('fonts/dynamics_icon.woff2?64k03c') format('woff2'),
+    url('fonts/dynamics_icon.ttf?64k03c') format('truetype'),
+    url('fonts/dynamics_icon.woff?64k03c') format('woff'),
+    url('fonts/dynamics_icon.svg?64k03c#dynamics_icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-Group-conversation:before {
+  content: "\e913";
+}
 .icon-conference-hover:before {
   content: "\e90f";
 }
